# dgui

./: Cargo.toml  LICENSE  README.md
src/: events.rs  layout.rs  lib.rs  signal.rs  signals.rs  styles.rs  text.rs  widgets.rs
src/layout/: bounds.rs  primitives.rs  tessellation.rs
src/styles/: button.rs  text.rs
